--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true 
+    "source.fixAll.eslint": true
   },
+  "editor.formatOnSave": true,
   "eslint.codeActionsOnSave.mode": "all",
   "eslint.format.enable": false,
   "[javascript]": {
@@ -9,9 +10,10 @@
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
-  }
+  },
+  "eslint.alwaysShowStatus": true
 }
