--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint ./src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.182",
+    "@types/mongoose": "^5.11.97",
+    "@types/mongoose-unique-validator": "^1.0.5",
+    "@types/node": "^17.0.25",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "config": "*",
@@ -30,8 +37,13 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.3.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.3.0",
+    "mongoose-unique-validator": "^3.0.0",
+    "validator": "^13.7.0"
   }
 }
