--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,15 +6,16 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "lint": "eslint ./src/index.ts"
+    "lint": "eslint ./src/index.ts",
+    "debug": "ndb ./dist/index.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
-    "@types/mongoose": "^5.11.97",
     "@types/mongoose-unique-validator": "^1.0.5",
     "@types/node": "^17.0.25",
     "@types/supertest": "^2.0.12",
@@ -41,6 +42,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.0",
     "mongoose-unique-validator": "^3.0.0",
